# ants

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  __main__.py  logo.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  docs.yml  tests.yml
ants/: __init__.py  boundary1d.pyx  boundary2d.pyx  constants.py  critical1d.pyx  critical2d.pyx  criticality.py  cytools.pxd  cytools.pyx  cytools_1d.pxd  cytools_1d.pyx  cytools_2d.pxd  cytools_2d.pyx  cytools_crit.pxd  cytools_crit.pyx  cytools_shared.pxd  cytools_shared.pyx  cyutils.cpp  cyutils.pxd  cyutils.pyx  datatypes.py  djinn1d.pyx  external1d.pyx  external2d.pyx  fixed1d.pyx  fixed2d.pyx  fixed_source.py  hybrid1d.pyx  hybrid2d.pyx  known_flux.cpp  main.py  mapper.py  materials.py  medium.py  multi_group.py  multi_group_1d.pxd  multi_group_1d.pyx  multi_group_2d.pxd  multi_group_2d.pyx  nearby1d.pyx  (+48 more)
ants.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ants/c_ants/: cSlab.c
ants/cy_ants/: CySlab.cpp  CySlab.pyx  multigroup.cpp  multigroup.pyx
ants/cyants/: ex-setup.py  known_flux.c  known_flux.cpp  known_flux.pyx  multi_group.cpp  multi_group.pyx  r_sweeps.cpp  r_sweeps.pxd  r_sweeps.pyx  x_sweeps.cpp  x_sweeps.pxd  x_sweeps.pyx
ants/problem/: materials.py
ants/sweeps/: x_sweeps.py  xy_sweeps.py
ants/utils/: dimension_reduction.py  dimensions.py  functions.py  hybrid.py  interp.py  interp1d.py  math.py  (+12 more)
docs/: ants-logo-backup.html  ants-logo.html  conf.py  hermite-splines.rst  index.rst  refs.bib
examples/: critical_1d_plutonium_slab.py  critical_1d_uranium_hdpe_slab.py  critical_1d_uranium_slab.py  critical_1d_uranium_sphere.py  critical_2d_C5G7.py  critical_2d_C5G7_xs.h5  critical_2d_C5G7_xs.py  fixed_source_1d_manufactured_01.py  fixed_source_1d_manufactured_02.py  fixed_source_1d_manufactured_03.py  fixed_source_1d_manufactured_04.py  fixed_source_1d_manufactured_05.py  fixed_source_1d_reeds.py  fixed_source_1d_uranium_slab.py  fixed_source_1d_uranium_sphere.py  fixed_source_2d_manufactured_01.py  fixed_source_2d_manufactured_02.py  fixed_source_2d_manufactured_03.py  fixed_source_2d_manufactured_04.py  fixed_source_manufactured_01_1d.py  fixed_source_manufactured_01_2d.py  fixed_source_manufactured_02_1d.py  fixed_source_manufactured_02_2d.py  fixed_source_manufactured_03_1d.py  fixed_source_manufactured_03_2d.py  fixed_source_manufactured_05_1d.py  fixed_source_reeds_1d.py  hybrid_1d_reed.py  hybrid_1d_uranium_slab.py  hybrid_2d_chevron_01.py  hybrid_2d_cylinder_01.py  manufactured.inp  manufactured_02.py  manufactured_03.py  manufactured_04.py  reeds_problem.py  template.inp  test-hybrid01.py  test-hybrid02.py  time_dependent_1d_reed.py  (+8 more)
input-files/: mms-one-material01.inp  mms-one-material02.inp  mms-one-material03.inp  mms-two-material01.inp  mms-two-material02.inp  template.inp
tests/: benchmark_checklist.txt  conftest.py  criticality_benchmarks.py  problems1d.py  problems2d.py  pytest.ini  speed_test.py  test_criticality.py  test_criticality_1d.py  test_criticality_2d.py  test_dimensions_2d.py  test_fixed_source_1d.py  test_fixed_source_2d.py  test_hybrid_1d.py  test_hybrid_2d.py  test_interp1d.py  test_interp2d.py  test_interp3d.py  test_legacy_materials.py  test_machine_learning.py  test_manufactured.py  test_manufactured_1d.py  test_manufactured_2d.py  test_manufactured_solutions.py  test_multigroup_1d.py  test_parallel_sweep.py  test_spatial_accuracy_1d.py  test_spatial_accuracy_2d.py  test_sweeps.py  test_time_accuracy_1d.py  test_time_accuracy_2d.py  test_time_dependent_1d.py  test_vhybrid_1d.py  test_vhybrid_2d.py  tools.py
(+44 files in other folders)
