[build-system]
requires = ["setuptools", "cython", "numpy", "tqdm"]
build-backend = "setuptools.build_meta"

[project]
name = "ants"
authors = [
    {name = "Ben Whewell", email = "ben.whewell@pm.me"}
]
description = "ANTS (A Neutron Transport Solution)"
version = "0.1.0-dev"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cython",
    "numpy",
    "tqdm", 
]

[project.optional-dependencies]
test = ["pytest"]
style = [
    "black",
    "isort",
    "ruff",
]
examples = [
    "h5py",
    "matplotlib",
    "seaborn",
]

[tool.setuptools.packages]
find = {}

[tool.pytest.ini_options]
python_files = ["test_*"]
python_classes = ["*Tests"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "smoke: All critical smoke tests",
    "slab1d: One-dimensional slab problems",
    "sphere1d: One-dimensional sphere problems",
    "source_iteration: Checks scalar and angular flux calculations",
    "power_iteration: Checks scalar flux and keffective calculations",
    "bdf1: Runs Backward Euler time dependent problems",
    "cn: Runs Crank Nicolson time dependent problems",
    "bdf2: Runs Backward Differentiation Formula 2 time dependent problems",
    "trbdf2: Runs Trapezoidal Step Backward Differentiation Formula 2",
    "hybrid: Runs hybrid method",
    "multigroup1d: Higher number of energy groups (G = 87, 618) - longer times",
    "multigroup2d: Higher number of energy groups (G = 87, 618) - longer times",
    "slab2d: Two-dimensional slab problems",
    "cylinder2d: Two-dimensional cylinder (circular) problems",
    "dimensions: Check the different dimensions of external and boundary sources",
    "math: test math functions - interpolation, error estimation, etc.",
]

[tool.black]
line-length = 88
target-version = ["py39"]
extend-exclude = '''
/( 
    build
    |ants\.egg-info
    |docs/_build
)/
'''

[tool.isort]
profile = "black"
py_version = 39
skip_glob = ["build/**", "ants.egg-info/**", "docs/_build/**"]
